<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESGI-Memory</string>
    
<!-- TITLE -->
	<string name="title_home">ESGI Memory</string>
	<string name="title_level">Difficulté</string>
    <string name="title_settings">Paramètres</string>
    <string name="title_scores">Scores</string>
    <string name="title_score">Score</string>
    
<!-- BUTTON -->
    <string name="button_retry">Rejouer</string>
    <string name="button_leave">Quitter</string>
    <string name="button_reload">Recommencer</string>
    <string name="button_delete_all_scores">Effacer tous les scores</string>
    <string name="button_delete_score">Supprimer</string>
    <string name="button_update_score">Mettre à jour</string>
    
<!-- ACTION -->
	<string name="action_sort_name">Trier par nom</string>
	<string name="action_sort_points">Trier par points</string>
    
<!-- NAVIGATION -->
	<string name="nav_previous">PRÉCÉDENT</string>
    <string name="nav_next">SUIVANT</string>
    
<!-- HOME -->
    <string name="home_button_play">Jouer</string>
	<string name="home_button_quick_game">Partie rapide</string>
    <string name="home_button_scores">Scores</string>
    <string name="home_button_settings">Paramètres</string>
    
<!-- LEVEL -->
    <string name="level_easy">Facile</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Difficile</string>
    
<!-- LABEL -->
    <string name="label_title_general">Général</string>
	<string name="label_title_quickgame">Partie rapide</string>
    <string name="label_username">Pseudo :</string>
    <string name="label_date">Date :</string>
	<string name="label_chrono">Chronomètre :</string>
	<string name="label_timer">Avec un minuteur :</string>
	<string name="label_time">Temps :</string>
	<string name="label_move">Nombre de coup :</string>
    <string name="label_sound">Son :</string>
    <string name="label_level">Difficulté :</string>
    <string name="label_bonus">Bonus difficulté :</string>
    <string name="label_points">Points :</string>
    <string name="label_times_up">Temps écoulé</string>
    <string name="label_equal">=</string>
    
<!-- RESULT -->
	<string name="init_value_time">0 sec</string>
	<string name="init_value_move">0 coup</string>
	<string name="dialog_title_win">Félicitation !</string>
    <string name="dialog_title_loose">Fucking noob !</string>
    <plurals name="numberMove">
        <item quantity="zero">0 coup</item>
        <item quantity="one">1 coup</item>
        <item quantity="other">%d coups</item>
    </plurals>
    
<!-- LISTVIEW -->
    <string name="column_username">Pseudo</string>
	<string name="column_score">Score</string>
	
<!-- DIALOG -->
	<string name="alert_delete_all_title">Suppression des scores</string>
	<string name="alert_delete_all_message">Es-tu sûr de vouloir tout supprimer ?</string>
	
<!-- ERROR -->
	<string name="error_username">Pseudo incorrect</string>
	
</resources>
