<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
            android:title="@string/label_title_general">
            
	    <CheckBoxPreference
	        android:dialogTitle="@string/label_sound"
	        android:key="edittext_sound"
	        android:title="@string/label_sound" />
	    
	    <EditTextPreference
	        android:key="checkbox_username"
	        android:title="@string/label_username" />
	</PreferenceCategory>
	
    <PreferenceCategory
            android:title="@string/label_title_quickgame" android:summary="Test">
	    
        <ListPreference 
            android:dialogTitle="@string/label_level" 
            android:key="listpref_level" 
            android:title="@string/label_level" 
            android:entries="@array/array_level_label" android:entryValues="@array/array_level_value" />
        
        <CheckBoxPreference
	        android:dialogTitle="@string/label_timer"
	        android:key="edittext_timer"
	        android:title="@string/label_timer" />
        
    </PreferenceCategory>

</PreferenceScreen>
