<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity">

    <ImageView android:id="@+id/img_logo_esgi" style="@style/image_logo"
        android:contentDescription=""  />    
    
    <Button android:onClick="goPlayGame"
        style="@style/button_home"
        android:text="@string/home_button_play" />
    
    <Button android:onClick="goQuickGame"
        style="@style/button_home"
        android:text="@string/home_button_quick_game" />
    
    <Button android:onClick="goScores"
        style="@style/button_home"
        android:text="@string/home_button_scores" />
    
    <Button android:onClick="goSettings"
        style="@style/button_home"
        android:text="@string/home_button_settings" />

</LinearLayout>
