<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialog_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView style="@style/dialog_game_label"
            android:text="@string/label_username" />
        <EditText
            android:id="@+id/editUsername"
            android:inputType="textPersonName"
            style="@style/dialog_game_value"
            android:minWidth="100dp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            style="@style/dialog_game_label"
            android:text="@string/label_time" />
        <TextView
            android:id="@+id/text_value_time"
            style="@style/dialog_game_value" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            style="@style/dialog_game_label"
            android:text="@string/label_move" />
        <TextView
            android:id="@+id/text_value_move"
            style="@style/dialog_game_value" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            style="@style/dialog_game_label"
            android:text="@string/label_bonus" />
        <TextView
            android:id="@+id/text_value_bonus"
            style="@style/dialog_game_value" />
    </RelativeLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:text="@string/label_equal" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            style="@style/dialog_game_label"
            android:text="@string/label_points" />
        <TextView
            android:id="@+id/text_value_points"
            style="@style/dialog_game_value" />
    </RelativeLayout>

</LinearLayout>