<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LevelActivity" >

    <Button android:onClick="playEasy"
        style="@style/ButtonLevel"
        android:text="@string/level_easy" />
    
    <Button android:onClick="playNormal"
        style="@style/ButtonLevel"
        android:text="@string/level_normal" />
    
    <Button android:onClick="playHard"
        style="@style/ButtonLevel"
        android:text="@string/level_hard" />

</LinearLayout>
